# EnergyOptimizatorOfRoboticCells

./: Algorithms_8h.html  Algorithms_8h__dep__incl.map  Algorithms_8h__dep__incl.md5  Algorithms_8h__incl.map  Algorithms_8h_source.html  CMakeLists.txt  ConstraintsGenerator_8cpp_source.html  ConstraintsGenerator_8h.html  ConstraintsGenerator_8h__dep__incl.map  ConstraintsGenerator_8h__incl.map  ConstraintsGenerator_8h__incl.md5  ConstraintsGenerator_8h_source.html  CplexSolver_8cpp_source.html  DataStructures_8h.html  DataStructures_8h__dep__incl.map  DataStructures_8h__incl.map  DataStructures_8h__incl.md5  DataStructures_8h_source.html  DefaultSettings_8h.html  DefaultSettings_8h_source.html  Exceptions_8cpp_source.html  Exceptions_8h.html  Exceptions_8h__dep__incl.map  Exceptions_8h__dep__incl.md5  Exceptions_8h__incl.md5  Exceptions_8h_source.html  GurobiSolver_8cpp_source.html  HeuristicAlgorithms_8cpp_source.html  HeuristicAlgorithms_8h.html  HeuristicAlgorithms_8h__dep__incl.map  HeuristicAlgorithms_8h__dep__incl.md5  HeuristicAlgorithms_8h__incl.md5  HeuristicAlgorithms_8h_source.html  ILPModel_8cpp_source.html  ILPModel_8h.html  ILPModel_8h__dep__incl.map  ILPModel_8h__incl.map  ILPModel_8h_source.html  InstancesReader_8cpp_source.html  InstancesReader_8h.html  (+481 more)
conf/: SolverConfig.h.in  doxyfilehtml.in
doc_extra/: Installation.dox  IntegerLinearProgrammingModelPage.dox  MainPage.dox  ParallelHybridHeuristicPage.dox  Programhelp.txt
documentation/: Algorithms_8h.html  Algorithms_8h__dep__incl.map  Algorithms_8h__dep__incl.md5  Algorithms_8h__incl.map  Algorithms_8h__incl.md5  Algorithms_8h_source.html  ConstraintsGenerator_8cpp_source.html  ConstraintsGenerator_8h.html  ConstraintsGenerator_8h__dep__incl.map  ConstraintsGenerator_8h__dep__incl.md5  ConstraintsGenerator_8h__incl.map  ConstraintsGenerator_8h__incl.md5  ConstraintsGenerator_8h_source.html  CplexSolver_8cpp_source.html  DataStructures_8h.html  DataStructures_8h__dep__incl.map  DataStructures_8h__dep__incl.md5  DataStructures_8h__incl.map  DataStructures_8h__incl.md5  DataStructures_8h_source.html  DefaultSettings_8h.html  DefaultSettings_8h__dep__incl.map  DefaultSettings_8h__dep__incl.md5  DefaultSettings_8h_source.html  Exceptions_8cpp_source.html  Exceptions_8h.html  Exceptions_8h__dep__incl.map  Exceptions_8h__dep__incl.md5  Exceptions_8h__incl.map  Exceptions_8h__incl.md5  Exceptions_8h_source.html  GurobiSolver_8cpp_source.html  HeuristicAlgorithms_8cpp_source.html  HeuristicAlgorithms_8h.html  HeuristicAlgorithms_8h__dep__incl.map  HeuristicAlgorithms_8h__dep__incl.md5  HeuristicAlgorithms_8h__incl.map  HeuristicAlgorithms_8h__incl.md5  HeuristicAlgorithms_8h_source.html  ILPModel_8cpp_source.html  (+515 more)
inc/: DefaultSettings.h  RoboticLine.h  Settings.h
inc/HeuristicSolver/: DataStructures.h  HeuristicAlgorithms.h  KnowledgeBase.h  ParallelHeuristicSolver.h
inc/ILPModel/: ILPModel.h  SolverInterface.h  SparseMatrix.h
inc/ILPSolver/: ConstraintsGenerator.h  RoboticLineSolverILP.h  RoboticLineSolverLP.h  VariableMappingILP.h  VariableMappingLP.h
inc/InstancesReader/: InstancesReader.h  XmlReader.h
inc/Shared/: Algorithms.h  Exceptions.h  NumericConstants.h  PrecalculatedMapping.h  Utils.h
inc/Solution/: Solution.h  SolutionChecker.h
modules/: FindCPLEX.cmake  FindGUROBI.cmake  FindLibXML++.cmake  FindLpSolve.cmake
src/: CMakeLists.txt  ProjectSolver.cpp  RoboticLine.cpp  Settings.cpp
src/Cplex/: CMakeLists.txt  CplexSolver.cpp
src/Gurobi/: CMakeLists.txt  GurobiSolver.cpp
src/HeuristicSolver/: CMakeLists.txt  HeuristicAlgorithms.cpp  KnowledgeBase.cpp  ParallelHeuristicSolver.cpp
src/ILPModel/: CMakeLists.txt  ILPModel.cpp
src/ILPSolver/: CMakeLists.txt  ConstraintsGenerator.cpp  RoboticLineSolverILP.cpp  RoboticLineSolverLP.cpp  VariableMappingILP.cpp  VariableMappingLP.cpp
src/InstancesReader/: CMakeLists.txt  InstancesReader.cpp  XmlReader.cpp
src/LPSolve/: CMakeLists.txt  LPSolveSolver.cpp
src/Shared/: CMakeLists.txt  Exceptions.cpp  PrecalculatedMapping.cpp  Utils.cpp
src/Solution/: CMakeLists.txt  Solution.cpp  SolutionChecker.cpp
xmlschema/: dataset.xsd
