add_subdirectory ("InstancesReader")
add_subdirectory ("ILPModel")
add_subdirectory ("ILPSolver")
add_subdirectory ("HeuristicSolver")
add_subdirectory ("Solution")
add_subdirectory ("Shared")

file (GLOB SOURCES "*.cpp")
add_executable (EnergyOptimizatorOfRoboticCells ${SOURCES})
target_link_libraries (EnergyOptimizatorOfRoboticCells InstancesReader)
target_link_libraries (EnergyOptimizatorOfRoboticCells ILPModel)
target_link_libraries (EnergyOptimizatorOfRoboticCells ILPSolver)
target_link_libraries (EnergyOptimizatorOfRoboticCells HeuristicSolver)
target_link_libraries (EnergyOptimizatorOfRoboticCells Solution)
target_link_libraries (EnergyOptimizatorOfRoboticCells Shared)

if (${ILP_SOLVER} STREQUAL "Cplex")
	add_subdirectory ("Cplex")
	target_link_libraries (EnergyOptimizatorOfRoboticCells CplexSolver)
elseif (${ILP_SOLVER} STREQUAL "Gurobi")
	add_subdirectory ("Gurobi")
	target_link_libraries (EnergyOptimizatorOfRoboticCells GurobiSolver)
elseif (${ILP_SOLVER} STREQUAL "LPSolve")
	add_subdirectory ("LPSolve")
	target_link_libraries (EnergyOptimizatorOfRoboticCells LPSolveSolver)
else ()
	message (FATAL_ERROR "Unsupported ILP solver '${ILP_SOLVER}'!")
endif ()

install (TARGETS EnergyOptimizatorOfRoboticCells DESTINATION bin)
