file (GLOB SOURCES "*.cpp")
add_library (ILPSolver ${LIBRARY_LINKAGE} ${SOURCES})
target_link_libraries (ILPSolver ILPModel)
if (${ILP_SOLVER} STREQUAL "Cplex")
	target_link_libraries (ILPSolver CplexSolver)
elseif (${ILP_SOLVER} STREQUAL "Gurobi")
	target_link_libraries (ILPSolver GurobiSolver)
elseif (${ILP_SOLVER} STREQUAL "LPSolve")
	target_link_libraries (ILPSolver LPSolveSolver)
else ()
	message (FATAL_ERROR "Unsupported ILP solver '${ILP_SOLVER}'!")
endif ()
install (TARGETS ILPSolver DESTINATION lib64)
